--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "consoletvs/charts": "6.*",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.0"
+        "laravel/jetstream": "^1.3",
+        "laravel/sanctum": "^2.6",
+        "laravel/tinker": "^2.0",
+        "livewire/livewire": "^2.0",
+        "spatie/laravel-query-builder": "^3.2"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
